<resources>
    <string name="app_name">Ussd Pro</string>
    <string name="operator">Operator</string>
    <string name="settings">Sozlamalar</string>
    <string name="home">Bosh sahifa</string>

    <string name="no_simcard">В вашем телефоне нет SIM-карты %1$s</string>

    <string name="permission_yes">Ruhsat berilmadi</string>
    <string name="permission_no">Ruhsat berildi</string>
    <string name="minute">Daqiqalar</string>
    <string name="internet">Internet</string>
    <string name="sms">SMS to’plamlar</string>
    <string name="tarif">Tariflar</string>
    <string name="code_ussd">USSD kodlar</string>
    <string name="service">Xizmatlar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activate">Faollashtirish</string>
    <string name="delete">O‘chirish</string>
    <string name="day">Kunlik</string>
    <string name="month">Oylik</string>
    <string name="week">Haftalik</string>
    <string name="hour">Soat</string>
    <string name="minutes">Daqiqalar</string>
    <string name="internet_paket">Internet to\'plamlar</string>
    <string name="see">Ko\'rish</string>
    <string name="definitions">Ta\'riflar</string>
    <string name="money">%1$s сум</string>
    <string name="megaBayt">%1$s mb</string>
    <string name="paket_1">%1$s sms</string>
    <string name="paket_2">%1$s daq</string>
    <!--    <string name="tariff">%1$s</string>-->
    <string name="duration">Muddat : </string>
    <string name="cost">Abonent tolovi : </string>
    <string name="code">Yoqish kodi : </string>
    <string name="disActivateCode">O\'chirish kodi : </string>
    <string name="checkLimit">Limitni tekshirish : </string>
    <string name="description">Tavsifi : </string>
    <string name="check">Trafik qoldig’ini tekshirish : %1$s</string>
    <string name="want_activate">Faollashtirishni xoxlaysizmi?</string>
    <string name="change_tariff">Ta\'rifni almashtirish?</string>
    <string name="change_tariff_1">Ta\'rifni almashtirish</string>
    <string name="want_deactivate">O\'chirishni xoxlaysizmi?</string>
    <string name="no">Yoq</string>
    <string name="yes">Xa</string>

</resources>